--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,34 @@
-ul li {
+.nav-links li{
     display: inline;
     margin: 0 10px;
     
 }
 
-a {
+.nav-links a{
     text-decoration: none;
-    color: #000;
+    color: #b81212;
+}
+
+.box{
+    height: 300px;
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f1f1f1;
+    padding: 1em 2em;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.rotate{
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
