--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,14 +10,14 @@
 }
 
 .box{
-    height: 300px;
-    width: 300px;
-    display: flex;
+    /* height: 300px;
+    width: 300px; */
+    /* display: flex;
     justify-content: space-between;
-    align-items: center;
-    background-color: #f1f1f1;
-    padding: 1em 2em;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    align-items: center; */
+    /* background-color: #f1f1f1; */
+    /* padding: 1em 2em;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1); */
 }
 
 .rotate{
