--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,7 +9,7 @@
     color: #b81212;
 }
 
-.box{
+/* .box{ */
     /* height: 300px;
     width: 300px; */
     /* display: flex;
@@ -18,7 +18,7 @@
     /* background-color: #f1f1f1; */
     /* padding: 1em 2em;
     box-shadow: 0 0 10px rgba(0,0,0,0.1); */
-}
+/* } */
 
 .rotate{
     animation: rotate 2s linear infinite;
